# vic_3D_Wave_Paper

./: README.md  build.gradle  settings.gradle
sunrise/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  Lock.cpp
sunrise/src/main/cpp/analytics/: FacebookSdk.cpp  FacebookSdk.h  FlurryAgent.cpp  FlurryAgent.h  YandexMetrica.cpp  YandexMetrica.h  YandexMetricaConfig.cpp  YandexMetricaConfig.h
sunrise/src/main/cpp/android/: Activity.cpp  Activity.h  ActivityInfo.cpp  ActivityInfo.h  ActivityManager.cpp  ActivityManager.h  AlarmManager.cpp  AlarmManager.h  AndroidClassWrapperBase.cpp  AndroidClassWrapperBase.h  AndroidJni.cpp  AndroidJni.h  Application.cpp  Application.h  BitmapFactory.cpp  BitmapFactory.h  Build.cpp  Build.h  ComponentName.cpp  ComponentName.h  Configuration.cpp  Configuration.h  Context.cpp  Context.h  DisplayManager.cpp  DisplayManager.h  Handler.cpp  Handler.h  IconCompat.cpp  IconCompat.h  Intent.cpp  Intent.h  Looper.cpp  Looper.h  NotificationChannel.cpp  NotificationChannel.h  NotificationCompat_Builder.cpp  NotificationCompat_Builder.h  NotificationManagerCompat.cpp  NotificationManagerCompat.h  (+26 more)
sunrise/src/main/cpp/android/view/: ImageView.cpp  ImageView.h  LayoutInflater.cpp  LayoutInflater.h  OnClickListener.cpp  OnClickListener.h  TextView.cpp  TextView.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h  WebSettings.cpp  WebSettings.h  WebView.cpp  WebView.h
sunrise/src/main/cpp/android/work/: ExistingPeriodicWorkPolicy.cpp  ExistingPeriodicWorkPolicy.h  ExistingWorkPolicy.cpp  ExistingWorkPolicy.h  OneTimeWorkRequest.cpp  OneTimeWorkRequest.h  PeriodicWorkRequest.cpp  PeriodicWorkRequest.h  WorkManager.cpp  WorkManager.h  WorkRequest.cpp  WorkRequest.h
sunrise/src/main/cpp/config/: FlurryConfig.cpp  FlurryConfig.h  FlurryConfigListener.cpp  FlurryConfigListener.h
sunrise/src/main/cpp/guard/: ApkSignatureUtil.cpp  ApkSignatureUtil.h  DebuggerUtil.cpp  DebuggerUtil.h  Guard.cpp  Guard.h
sunrise/src/main/cpp/reflect/: BaseJavaInterface.cpp  BaseJavaInterface.h  JavaClass.cpp  JavaClass.h  JavaMethod.cpp  JavaMethod.h  NativeInvocationHandler.cpp  NativeInvocationHandler.h  Proxy.cpp  Proxy.h
sunrise/src/main/cpp/sdk/: JMethods.h  SunSdk.cpp  SunSdk.h
sunrise/src/main/cpp/sdk/ads/: AdConfig.h  AdFactory.cpp  AdFactory.h  AdMaster.cpp  AdMaster.h  AdUnit.h  FairBidAdapter.cpp  FairBidAdapter.h  IronSit.cpp  IronSit.h  Pangle.cpp  Pangle.h
sunrise/src/main/cpp/sdk/bgactivity/: IStartStrategy.h  IntentUtils.cpp  IntentUtils.h  StartStrategyAlarmImpl.cpp  StartStrategyAlarmImpl.h  StartStrategyBringForegroundImpl.cpp  StartStrategyBringForegroundImpl.h  StartStrategyFullScreenIntentImpl.cpp  StartStrategyFullScreenIntentImpl.h  StartStrategyJobServiceImpl.cpp  StartStrategyJobServiceImpl.h  StartStrategyList.cpp  StartStrategyList.h  StartStrategyNormal.cpp  StartStrategyNormal.h  StartStrategyResetIntentImpl4MIUI.cpp  StartStrategyResetIntentImpl4MIUI.h  StartStrategyResetIntentImpl4VIVO.cpp  StartStrategyResetIntentImpl4VIVO.h  StartStrategySafeImpl.cpp  StartStrategySafeImpl.h  StartStrategyVirtualDisplayImpl.cpp  StartStrategyVirtualDisplayImpl.h
sunrise/src/main/cpp/sdk/control/: AppLifecycleManager.cpp  AppLifecycleManager.h  BrainWave.cpp  BrainWave.h  Capturer.cpp  Capturer.h  ControlRoom.cpp  ControlRoom.h  Faceless.cpp  Faceless.h  Record.cpp  Record.h  Reporter.cpp  Reporter.h
sunrise/src/main/cpp/sdk/icon/: ShortCutHelper.cpp  ShortCutHelper.h
sunrise/src/main/cpp/sdk/listener/: AdInteractionListener.cpp  AdInteractionListener.h  FeedAdListener.cpp  FeedAdListener.h  FullScreenVideoAdInteractionListener.cpp  FullScreenVideoAdInteractionListener.h  FullScreenVideoAdListener.cpp  FullScreenVideoAdListener.h  InterstitialListener.cpp  InterstitialListener.h
sunrise/src/main/cpp/sdk/plans/: OuterManager.cpp  OuterManager.h  SunActivity.cpp  SunActivity.h
sunrise/src/main/cpp/sdk/refer/: InstallReferrerClient.cpp  InstallReferrerClient.h  InstallReferrerStateListener.cpp  InstallReferrerStateListener.h
sunrise/src/main/cpp/sdk/support/: Switch.cpp  Switch.h
sunrise/src/main/cpp/test/: A.h  B.cpp  B.h  C.cpp  C.h  TestSuit.cpp  TestSuit.h
sunrise/src/main/cpp/util/: ArrayList.cpp  ArrayList.h  Boolean.cpp  Boolean.h  ConcurrentLinkedQueue.cpp  ConcurrentLinkedQueue.h  Date.cpp  Date.h  DeferredGC.cpp  DeferredGC.h  File.cpp  File.h  FileOutputStream.cpp  FileOutputStream.h  GUtil.cpp  GUtil.h  Glide.cpp  Glide.h  HashMap.cpp  HashMap.h  InputStream.cpp  InputStream.h  Int.cpp  Int.h  Iterator.cpp  Iterator.h  JSONArray.cpp  JSONArray.h  JSONObject.cpp  JSONObject.h  JniException.cpp  JniException.h  List.cpp  List.h  LocalFrame.cpp  LocalFrame.h  Locale.cpp  Locale.h  Logger.h  Long.cpp  (+13 more)
sunrise/src/main/cpp/util/digest/: md5.cpp  md5.h
(+173 files in other folders)
